refactor: Centralize game configuration using pydantic-settings
- Introduce src/config.py with Settings class

- Refactor server, models, agents, and vendor systems to use new config

- Update requirements.txt

- Clean up tasks.md

--- a/.gitignore
+++ b/.gitignore
@@ -26,16 +26,17 @@ venv/
 env/
 ENV/
 .env
+.venv
 E:\projects\repo_mat\matbench\venv313
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
-
+.bak/
 # Logs
 logs/
 *.log
-
+.agent/
 # Editor
 .vscode/
 .idea/
